Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42991

Android: QTextEdit and QPlainTextEdit - Arrow Keys doesn't move the cursor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.1
    • 5.3.0, 5.3.1, 5.3.2, 5.4.0 RC
    • QPA
    • None
    • Android 4.4
    • Android
    • b9547af45ea2bbbc634722c1ef41afdb54216ce2

      I am using a QTextEdit (I also tested it with QPlainTextEdit) with Qt 5.3.2 and 5.4 RC and I have noticed that the Left-Arrow key on the Android virtual keyboard that pops up does not move the cursor/caret to the previous position.

      I have tried to work-around the problem by sub-classing the QTextEdit (or QPlainTextEdit) and handling the keyPressEvent and detecting the left arrow key press and calling QTextCursor::setPosition(..) and movePosition() but the cursor still does not move. This happens on Android. I have not tried it on iOS or something else.

      To reproduce the issue, simply drop a QTextEdit or QPlainText edit on a form or create it dynamically and run the project as an Android app. Type in some text such as ABC and then using the virtual keyboard that's popped up, click the left arrow and the caret won't move.

      Please fix this, this is preventing me from completing my app.

        For Gerrit Dashboard: QTBUG-42991
        # Subject Branch Project Status CR V

            tvete Paul Olav Tvete
            rwxc John
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes